islparser/parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> import labels module options
Rule 2     nil -> <empty>
Rule 3     import -> IMPORT path
Rule 4     path -> ID path
Rule 5     path -> DOT path
Rule 6     path -> nil
Rule 7     labels -> LABELS labellist ENDLABELS
Rule 8     module -> MODULE automata ENDMODULE
Rule 9     options -> OPTIONS ENDOPTIONS
Rule 10    options -> nil
Rule 11    labellist -> label
Rule 12    labellist -> label COMMA labellist
Rule 13    labellist -> nil
Rule 14    label -> ID COLON OPENLIST act_or_pred_list CLOSELIST
Rule 15    act_or_pred_list -> act_or_pred
Rule 16    act_or_pred_list -> act_or_pred AND act_or_pred_list
Rule 17    act_or_pred -> ACTION COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
Rule 18    act_or_pred -> PREDICATE COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
Rule 19    act_or_pred -> PREDICATE COLON NOT ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
Rule 20    act_or_pred -> nil
Rule 21    param_dec -> ID
Rule 22    param_dec -> ID COMMA param_dec
Rule 23    param_dec -> nil
Rule 24    automata -> state_dec_wrapper cond_dec_wrapper trel
Rule 25    automata -> state_dec_wrapper trel
Rule 26    automata -> nil
Rule 27    cond_dec_wrapper -> GUARD COLON OPENLIST cond_dec CLOSELIST SEMICOLON
Rule 28    cond_dec -> INT COLON ID
Rule 29    cond_dec -> INT COLON INIT
Rule 30    cond_dec -> INT COLON ID COMMA cond_dec
Rule 31    cond_dec -> INT COLON INIT COMMA cond_dec
Rule 32    cond_dec -> nil
Rule 33    state_dec_wrapper -> ST COLON OPENLIST state_dec CLOSELIST SEMICOLON
Rule 34    state_dec -> INT COLON ID
Rule 35    state_dec -> INT COLON INIT
Rule 36    state_dec -> INT COLON ID COMMA state_dec
Rule 37    state_dec -> INT COLON INIT COMMA state_dec
Rule 38    state_dec -> nil
Rule 39    trel -> event boolexp ARROW INT SEMICOLON trel
Rule 40    trel -> nil
Rule 41    event -> OPENLIST CLOSELIST
Rule 42    event -> OPENLIST ID CLOSELIST
Rule 43    boolexp -> INT AND GUARD EQUAL ID
Rule 44    boolexp -> INT AND GUARD EQUAL INT
Rule 45    boolexp -> INT

Terminals, with rules where they appear

ACTION               : 17
AND                  : 16 43 44
ARROW                : 39
CLOSELIST            : 14 17 18 19 27 33 41 42
COLON                : 14 17 17 18 18 19 19 27 28 29 30 31 33 34 35 36 37
COMMA                : 12 17 18 19 22 30 31 36 37
DOT                  : 5
ENDLABELS            : 7
ENDMODULE            : 8
ENDOPTIONS           : 9
EQUAL                : 43 44
GUARD                : 27 43 44
ID                   : 4 14 17 18 19 21 22 28 30 34 36 42 43
IMPORT               : 3
INIT                 : 29 31 35 37
INT                  : 28 29 30 31 34 35 36 37 39 43 44 44 45
LABELS               : 7
MODULE               : 8
NOT                  : 19
OPENLIST             : 14 17 18 19 27 33 41 42
OPTIONS              : 9
PARAMS               : 17 18 19
PREDICATE            : 18 19
SEMICOLON            : 27 33 39
ST                   : 33
error                : 

Nonterminals, with rules where they appear

act_or_pred          : 15 16
act_or_pred_list     : 14 16
automata             : 8
boolexp              : 39
cond_dec             : 27 30 31
cond_dec_wrapper     : 24
event                : 39
import               : 1
label                : 11 12
labellist            : 7 12
labels               : 1
module               : 1
nil                  : 6 10 13 20 23 26 32 38 40
options              : 1
param_dec            : 17 18 19 22
path                 : 3 4 5
program              : 0
state_dec            : 33 36 37
state_dec_wrapper    : 24 25
trel                 : 24 25 39

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . import labels module options
    (3) import -> . IMPORT path

    IMPORT          shift and go to state 3

    program                        shift and go to state 1
    import                         shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> import . labels module options
    (7) labels -> . LABELS labellist ENDLABELS

    LABELS          shift and go to state 5

    labels                         shift and go to state 4

state 3

    (3) import -> IMPORT . path
    (4) path -> . ID path
    (5) path -> . DOT path
    (6) path -> . nil
    (2) nil -> .

    ID              shift and go to state 7
    DOT             shift and go to state 8
    LABELS          reduce using rule 2 (nil -> .)

    path                           shift and go to state 6
    nil                            shift and go to state 9

state 4

    (1) program -> import labels . module options
    (8) module -> . MODULE automata ENDMODULE

    MODULE          shift and go to state 11

    module                         shift and go to state 10

state 5

    (7) labels -> LABELS . labellist ENDLABELS
    (11) labellist -> . label
    (12) labellist -> . label COMMA labellist
    (13) labellist -> . nil
    (14) label -> . ID COLON OPENLIST act_or_pred_list CLOSELIST
    (2) nil -> .

    ID              shift and go to state 15
    ENDLABELS       reduce using rule 2 (nil -> .)

    labellist                      shift and go to state 12
    label                          shift and go to state 13
    nil                            shift and go to state 14

state 6

    (3) import -> IMPORT path .

    LABELS          reduce using rule 3 (import -> IMPORT path .)


state 7

    (4) path -> ID . path
    (4) path -> . ID path
    (5) path -> . DOT path
    (6) path -> . nil
    (2) nil -> .

    ID              shift and go to state 7
    DOT             shift and go to state 8
    LABELS          reduce using rule 2 (nil -> .)

    path                           shift and go to state 16
    nil                            shift and go to state 9

state 8

    (5) path -> DOT . path
    (4) path -> . ID path
    (5) path -> . DOT path
    (6) path -> . nil
    (2) nil -> .

    ID              shift and go to state 7
    DOT             shift and go to state 8
    LABELS          reduce using rule 2 (nil -> .)

    path                           shift and go to state 17
    nil                            shift and go to state 9

state 9

    (6) path -> nil .

    LABELS          reduce using rule 6 (path -> nil .)


state 10

    (1) program -> import labels module . options
    (9) options -> . OPTIONS ENDOPTIONS
    (10) options -> . nil
    (2) nil -> .

    OPTIONS         shift and go to state 19
    $end            reduce using rule 2 (nil -> .)

    options                        shift and go to state 18
    nil                            shift and go to state 20

state 11

    (8) module -> MODULE . automata ENDMODULE
    (24) automata -> . state_dec_wrapper cond_dec_wrapper trel
    (25) automata -> . state_dec_wrapper trel
    (26) automata -> . nil
    (33) state_dec_wrapper -> . ST COLON OPENLIST state_dec CLOSELIST SEMICOLON
    (2) nil -> .

    ST              shift and go to state 24
    ENDMODULE       reduce using rule 2 (nil -> .)

    automata                       shift and go to state 21
    state_dec_wrapper              shift and go to state 22
    nil                            shift and go to state 23

state 12

    (7) labels -> LABELS labellist . ENDLABELS

    ENDLABELS       shift and go to state 25


state 13

    (11) labellist -> label .
    (12) labellist -> label . COMMA labellist

    ENDLABELS       reduce using rule 11 (labellist -> label .)
    COMMA           shift and go to state 26


state 14

    (13) labellist -> nil .

    ENDLABELS       reduce using rule 13 (labellist -> nil .)


state 15

    (14) label -> ID . COLON OPENLIST act_or_pred_list CLOSELIST

    COLON           shift and go to state 27


state 16

    (4) path -> ID path .

    LABELS          reduce using rule 4 (path -> ID path .)


state 17

    (5) path -> DOT path .

    LABELS          reduce using rule 5 (path -> DOT path .)


state 18

    (1) program -> import labels module options .

    $end            reduce using rule 1 (program -> import labels module options .)


state 19

    (9) options -> OPTIONS . ENDOPTIONS

    ENDOPTIONS      shift and go to state 28


state 20

    (10) options -> nil .

    $end            reduce using rule 10 (options -> nil .)


state 21

    (8) module -> MODULE automata . ENDMODULE

    ENDMODULE       shift and go to state 29


state 22

    (24) automata -> state_dec_wrapper . cond_dec_wrapper trel
    (25) automata -> state_dec_wrapper . trel
    (27) cond_dec_wrapper -> . GUARD COLON OPENLIST cond_dec CLOSELIST SEMICOLON
    (39) trel -> . event boolexp ARROW INT SEMICOLON trel
    (40) trel -> . nil
    (41) event -> . OPENLIST CLOSELIST
    (42) event -> . OPENLIST ID CLOSELIST
    (2) nil -> .

    GUARD           shift and go to state 32
    OPENLIST        shift and go to state 33
    ENDMODULE       reduce using rule 2 (nil -> .)

    cond_dec_wrapper               shift and go to state 30
    trel                           shift and go to state 31
    event                          shift and go to state 34
    nil                            shift and go to state 35

state 23

    (26) automata -> nil .

    ENDMODULE       reduce using rule 26 (automata -> nil .)


state 24

    (33) state_dec_wrapper -> ST . COLON OPENLIST state_dec CLOSELIST SEMICOLON

    COLON           shift and go to state 36


state 25

    (7) labels -> LABELS labellist ENDLABELS .

    MODULE          reduce using rule 7 (labels -> LABELS labellist ENDLABELS .)


state 26

    (12) labellist -> label COMMA . labellist
    (11) labellist -> . label
    (12) labellist -> . label COMMA labellist
    (13) labellist -> . nil
    (14) label -> . ID COLON OPENLIST act_or_pred_list CLOSELIST
    (2) nil -> .

    ID              shift and go to state 15
    ENDLABELS       reduce using rule 2 (nil -> .)

    label                          shift and go to state 13
    labellist                      shift and go to state 37
    nil                            shift and go to state 14

state 27

    (14) label -> ID COLON . OPENLIST act_or_pred_list CLOSELIST

    OPENLIST        shift and go to state 38


state 28

    (9) options -> OPTIONS ENDOPTIONS .

    $end            reduce using rule 9 (options -> OPTIONS ENDOPTIONS .)


state 29

    (8) module -> MODULE automata ENDMODULE .

    OPTIONS         reduce using rule 8 (module -> MODULE automata ENDMODULE .)
    $end            reduce using rule 8 (module -> MODULE automata ENDMODULE .)


state 30

    (24) automata -> state_dec_wrapper cond_dec_wrapper . trel
    (39) trel -> . event boolexp ARROW INT SEMICOLON trel
    (40) trel -> . nil
    (41) event -> . OPENLIST CLOSELIST
    (42) event -> . OPENLIST ID CLOSELIST
    (2) nil -> .

    OPENLIST        shift and go to state 33
    ENDMODULE       reduce using rule 2 (nil -> .)

    trel                           shift and go to state 39
    event                          shift and go to state 34
    nil                            shift and go to state 35

state 31

    (25) automata -> state_dec_wrapper trel .

    ENDMODULE       reduce using rule 25 (automata -> state_dec_wrapper trel .)


state 32

    (27) cond_dec_wrapper -> GUARD . COLON OPENLIST cond_dec CLOSELIST SEMICOLON

    COLON           shift and go to state 40


state 33

    (41) event -> OPENLIST . CLOSELIST
    (42) event -> OPENLIST . ID CLOSELIST

    CLOSELIST       shift and go to state 41
    ID              shift and go to state 42


state 34

    (39) trel -> event . boolexp ARROW INT SEMICOLON trel
    (43) boolexp -> . INT AND GUARD EQUAL ID
    (44) boolexp -> . INT AND GUARD EQUAL INT
    (45) boolexp -> . INT

    INT             shift and go to state 44

    boolexp                        shift and go to state 43

state 35

    (40) trel -> nil .

    ENDMODULE       reduce using rule 40 (trel -> nil .)


state 36

    (33) state_dec_wrapper -> ST COLON . OPENLIST state_dec CLOSELIST SEMICOLON

    OPENLIST        shift and go to state 45


state 37

    (12) labellist -> label COMMA labellist .

    ENDLABELS       reduce using rule 12 (labellist -> label COMMA labellist .)


state 38

    (14) label -> ID COLON OPENLIST . act_or_pred_list CLOSELIST
    (15) act_or_pred_list -> . act_or_pred
    (16) act_or_pred_list -> . act_or_pred AND act_or_pred_list
    (17) act_or_pred -> . ACTION COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
    (18) act_or_pred -> . PREDICATE COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
    (19) act_or_pred -> . PREDICATE COLON NOT ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
    (20) act_or_pred -> . nil
    (2) nil -> .

    ACTION          shift and go to state 48
    PREDICATE       shift and go to state 49
    AND             reduce using rule 2 (nil -> .)
    CLOSELIST       reduce using rule 2 (nil -> .)

    act_or_pred_list               shift and go to state 46
    act_or_pred                    shift and go to state 47
    nil                            shift and go to state 50

state 39

    (24) automata -> state_dec_wrapper cond_dec_wrapper trel .

    ENDMODULE       reduce using rule 24 (automata -> state_dec_wrapper cond_dec_wrapper trel .)


state 40

    (27) cond_dec_wrapper -> GUARD COLON . OPENLIST cond_dec CLOSELIST SEMICOLON

    OPENLIST        shift and go to state 51


state 41

    (41) event -> OPENLIST CLOSELIST .

    INT             reduce using rule 41 (event -> OPENLIST CLOSELIST .)


state 42

    (42) event -> OPENLIST ID . CLOSELIST

    CLOSELIST       shift and go to state 52


state 43

    (39) trel -> event boolexp . ARROW INT SEMICOLON trel

    ARROW           shift and go to state 53


state 44

    (43) boolexp -> INT . AND GUARD EQUAL ID
    (44) boolexp -> INT . AND GUARD EQUAL INT
    (45) boolexp -> INT .

    AND             shift and go to state 54
    ARROW           reduce using rule 45 (boolexp -> INT .)


state 45

    (33) state_dec_wrapper -> ST COLON OPENLIST . state_dec CLOSELIST SEMICOLON
    (34) state_dec -> . INT COLON ID
    (35) state_dec -> . INT COLON INIT
    (36) state_dec -> . INT COLON ID COMMA state_dec
    (37) state_dec -> . INT COLON INIT COMMA state_dec
    (38) state_dec -> . nil
    (2) nil -> .

    INT             shift and go to state 56
    CLOSELIST       reduce using rule 2 (nil -> .)

    state_dec                      shift and go to state 55
    nil                            shift and go to state 57

state 46

    (14) label -> ID COLON OPENLIST act_or_pred_list . CLOSELIST

    CLOSELIST       shift and go to state 58


state 47

    (15) act_or_pred_list -> act_or_pred .
    (16) act_or_pred_list -> act_or_pred . AND act_or_pred_list

    CLOSELIST       reduce using rule 15 (act_or_pred_list -> act_or_pred .)
    AND             shift and go to state 59


state 48

    (17) act_or_pred -> ACTION . COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    COLON           shift and go to state 60


state 49

    (18) act_or_pred -> PREDICATE . COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
    (19) act_or_pred -> PREDICATE . COLON NOT ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    COLON           shift and go to state 61


state 50

    (20) act_or_pred -> nil .

    AND             reduce using rule 20 (act_or_pred -> nil .)
    CLOSELIST       reduce using rule 20 (act_or_pred -> nil .)


state 51

    (27) cond_dec_wrapper -> GUARD COLON OPENLIST . cond_dec CLOSELIST SEMICOLON
    (28) cond_dec -> . INT COLON ID
    (29) cond_dec -> . INT COLON INIT
    (30) cond_dec -> . INT COLON ID COMMA cond_dec
    (31) cond_dec -> . INT COLON INIT COMMA cond_dec
    (32) cond_dec -> . nil
    (2) nil -> .

    INT             shift and go to state 63
    CLOSELIST       reduce using rule 2 (nil -> .)

    cond_dec                       shift and go to state 62
    nil                            shift and go to state 64

state 52

    (42) event -> OPENLIST ID CLOSELIST .

    INT             reduce using rule 42 (event -> OPENLIST ID CLOSELIST .)


state 53

    (39) trel -> event boolexp ARROW . INT SEMICOLON trel

    INT             shift and go to state 65


state 54

    (43) boolexp -> INT AND . GUARD EQUAL ID
    (44) boolexp -> INT AND . GUARD EQUAL INT

    GUARD           shift and go to state 66


state 55

    (33) state_dec_wrapper -> ST COLON OPENLIST state_dec . CLOSELIST SEMICOLON

    CLOSELIST       shift and go to state 67


state 56

    (34) state_dec -> INT . COLON ID
    (35) state_dec -> INT . COLON INIT
    (36) state_dec -> INT . COLON ID COMMA state_dec
    (37) state_dec -> INT . COLON INIT COMMA state_dec

    COLON           shift and go to state 68


state 57

    (38) state_dec -> nil .

    CLOSELIST       reduce using rule 38 (state_dec -> nil .)


state 58

    (14) label -> ID COLON OPENLIST act_or_pred_list CLOSELIST .

    COMMA           reduce using rule 14 (label -> ID COLON OPENLIST act_or_pred_list CLOSELIST .)
    ENDLABELS       reduce using rule 14 (label -> ID COLON OPENLIST act_or_pred_list CLOSELIST .)


state 59

    (16) act_or_pred_list -> act_or_pred AND . act_or_pred_list
    (15) act_or_pred_list -> . act_or_pred
    (16) act_or_pred_list -> . act_or_pred AND act_or_pred_list
    (17) act_or_pred -> . ACTION COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
    (18) act_or_pred -> . PREDICATE COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
    (19) act_or_pred -> . PREDICATE COLON NOT ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
    (20) act_or_pred -> . nil
    (2) nil -> .

    ACTION          shift and go to state 48
    PREDICATE       shift and go to state 49
    AND             reduce using rule 2 (nil -> .)
    CLOSELIST       reduce using rule 2 (nil -> .)

    act_or_pred                    shift and go to state 47
    act_or_pred_list               shift and go to state 69
    nil                            shift and go to state 50

state 60

    (17) act_or_pred -> ACTION COLON . ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    ID              shift and go to state 70


state 61

    (18) act_or_pred -> PREDICATE COLON . ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST
    (19) act_or_pred -> PREDICATE COLON . NOT ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    ID              shift and go to state 71
    NOT             shift and go to state 72


state 62

    (27) cond_dec_wrapper -> GUARD COLON OPENLIST cond_dec . CLOSELIST SEMICOLON

    CLOSELIST       shift and go to state 73


state 63

    (28) cond_dec -> INT . COLON ID
    (29) cond_dec -> INT . COLON INIT
    (30) cond_dec -> INT . COLON ID COMMA cond_dec
    (31) cond_dec -> INT . COLON INIT COMMA cond_dec

    COLON           shift and go to state 74


state 64

    (32) cond_dec -> nil .

    CLOSELIST       reduce using rule 32 (cond_dec -> nil .)


state 65

    (39) trel -> event boolexp ARROW INT . SEMICOLON trel

    SEMICOLON       shift and go to state 75


state 66

    (43) boolexp -> INT AND GUARD . EQUAL ID
    (44) boolexp -> INT AND GUARD . EQUAL INT

    EQUAL           shift and go to state 76


state 67

    (33) state_dec_wrapper -> ST COLON OPENLIST state_dec CLOSELIST . SEMICOLON

    SEMICOLON       shift and go to state 77


state 68

    (34) state_dec -> INT COLON . ID
    (35) state_dec -> INT COLON . INIT
    (36) state_dec -> INT COLON . ID COMMA state_dec
    (37) state_dec -> INT COLON . INIT COMMA state_dec

    ID              shift and go to state 78
    INIT            shift and go to state 79


state 69

    (16) act_or_pred_list -> act_or_pred AND act_or_pred_list .

    CLOSELIST       reduce using rule 16 (act_or_pred_list -> act_or_pred AND act_or_pred_list .)


state 70

    (17) act_or_pred -> ACTION COLON ID . COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    COMMA           shift and go to state 80


state 71

    (18) act_or_pred -> PREDICATE COLON ID . COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    COMMA           shift and go to state 81


state 72

    (19) act_or_pred -> PREDICATE COLON NOT . ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    ID              shift and go to state 82


state 73

    (27) cond_dec_wrapper -> GUARD COLON OPENLIST cond_dec CLOSELIST . SEMICOLON

    SEMICOLON       shift and go to state 83


state 74

    (28) cond_dec -> INT COLON . ID
    (29) cond_dec -> INT COLON . INIT
    (30) cond_dec -> INT COLON . ID COMMA cond_dec
    (31) cond_dec -> INT COLON . INIT COMMA cond_dec

    ID              shift and go to state 84
    INIT            shift and go to state 85


state 75

    (39) trel -> event boolexp ARROW INT SEMICOLON . trel
    (39) trel -> . event boolexp ARROW INT SEMICOLON trel
    (40) trel -> . nil
    (41) event -> . OPENLIST CLOSELIST
    (42) event -> . OPENLIST ID CLOSELIST
    (2) nil -> .

    OPENLIST        shift and go to state 33
    ENDMODULE       reduce using rule 2 (nil -> .)

    event                          shift and go to state 34
    trel                           shift and go to state 86
    nil                            shift and go to state 35

state 76

    (43) boolexp -> INT AND GUARD EQUAL . ID
    (44) boolexp -> INT AND GUARD EQUAL . INT

    ID              shift and go to state 88
    INT             shift and go to state 87


state 77

    (33) state_dec_wrapper -> ST COLON OPENLIST state_dec CLOSELIST SEMICOLON .

    GUARD           reduce using rule 33 (state_dec_wrapper -> ST COLON OPENLIST state_dec CLOSELIST SEMICOLON .)
    OPENLIST        reduce using rule 33 (state_dec_wrapper -> ST COLON OPENLIST state_dec CLOSELIST SEMICOLON .)
    ENDMODULE       reduce using rule 33 (state_dec_wrapper -> ST COLON OPENLIST state_dec CLOSELIST SEMICOLON .)


state 78

    (34) state_dec -> INT COLON ID .
    (36) state_dec -> INT COLON ID . COMMA state_dec

    CLOSELIST       reduce using rule 34 (state_dec -> INT COLON ID .)
    COMMA           shift and go to state 89


state 79

    (35) state_dec -> INT COLON INIT .
    (37) state_dec -> INT COLON INIT . COMMA state_dec

    CLOSELIST       reduce using rule 35 (state_dec -> INT COLON INIT .)
    COMMA           shift and go to state 90


state 80

    (17) act_or_pred -> ACTION COLON ID COMMA . PARAMS COLON OPENLIST param_dec CLOSELIST

    PARAMS          shift and go to state 91


state 81

    (18) act_or_pred -> PREDICATE COLON ID COMMA . PARAMS COLON OPENLIST param_dec CLOSELIST

    PARAMS          shift and go to state 92


state 82

    (19) act_or_pred -> PREDICATE COLON NOT ID . COMMA PARAMS COLON OPENLIST param_dec CLOSELIST

    COMMA           shift and go to state 93


state 83

    (27) cond_dec_wrapper -> GUARD COLON OPENLIST cond_dec CLOSELIST SEMICOLON .

    OPENLIST        reduce using rule 27 (cond_dec_wrapper -> GUARD COLON OPENLIST cond_dec CLOSELIST SEMICOLON .)
    ENDMODULE       reduce using rule 27 (cond_dec_wrapper -> GUARD COLON OPENLIST cond_dec CLOSELIST SEMICOLON .)


state 84

    (28) cond_dec -> INT COLON ID .
    (30) cond_dec -> INT COLON ID . COMMA cond_dec

    CLOSELIST       reduce using rule 28 (cond_dec -> INT COLON ID .)
    COMMA           shift and go to state 94


state 85

    (29) cond_dec -> INT COLON INIT .
    (31) cond_dec -> INT COLON INIT . COMMA cond_dec

    CLOSELIST       reduce using rule 29 (cond_dec -> INT COLON INIT .)
    COMMA           shift and go to state 95


state 86

    (39) trel -> event boolexp ARROW INT SEMICOLON trel .

    ENDMODULE       reduce using rule 39 (trel -> event boolexp ARROW INT SEMICOLON trel .)


state 87

    (44) boolexp -> INT AND GUARD EQUAL INT .

    ARROW           reduce using rule 44 (boolexp -> INT AND GUARD EQUAL INT .)


state 88

    (43) boolexp -> INT AND GUARD EQUAL ID .

    ARROW           reduce using rule 43 (boolexp -> INT AND GUARD EQUAL ID .)


state 89

    (36) state_dec -> INT COLON ID COMMA . state_dec
    (34) state_dec -> . INT COLON ID
    (35) state_dec -> . INT COLON INIT
    (36) state_dec -> . INT COLON ID COMMA state_dec
    (37) state_dec -> . INT COLON INIT COMMA state_dec
    (38) state_dec -> . nil
    (2) nil -> .

    INT             shift and go to state 56
    CLOSELIST       reduce using rule 2 (nil -> .)

    state_dec                      shift and go to state 96
    nil                            shift and go to state 57

state 90

    (37) state_dec -> INT COLON INIT COMMA . state_dec
    (34) state_dec -> . INT COLON ID
    (35) state_dec -> . INT COLON INIT
    (36) state_dec -> . INT COLON ID COMMA state_dec
    (37) state_dec -> . INT COLON INIT COMMA state_dec
    (38) state_dec -> . nil
    (2) nil -> .

    INT             shift and go to state 56
    CLOSELIST       reduce using rule 2 (nil -> .)

    state_dec                      shift and go to state 97
    nil                            shift and go to state 57

state 91

    (17) act_or_pred -> ACTION COLON ID COMMA PARAMS . COLON OPENLIST param_dec CLOSELIST

    COLON           shift and go to state 98


state 92

    (18) act_or_pred -> PREDICATE COLON ID COMMA PARAMS . COLON OPENLIST param_dec CLOSELIST

    COLON           shift and go to state 99


state 93

    (19) act_or_pred -> PREDICATE COLON NOT ID COMMA . PARAMS COLON OPENLIST param_dec CLOSELIST

    PARAMS          shift and go to state 100


state 94

    (30) cond_dec -> INT COLON ID COMMA . cond_dec
    (28) cond_dec -> . INT COLON ID
    (29) cond_dec -> . INT COLON INIT
    (30) cond_dec -> . INT COLON ID COMMA cond_dec
    (31) cond_dec -> . INT COLON INIT COMMA cond_dec
    (32) cond_dec -> . nil
    (2) nil -> .

    INT             shift and go to state 63
    CLOSELIST       reduce using rule 2 (nil -> .)

    cond_dec                       shift and go to state 101
    nil                            shift and go to state 64

state 95

    (31) cond_dec -> INT COLON INIT COMMA . cond_dec
    (28) cond_dec -> . INT COLON ID
    (29) cond_dec -> . INT COLON INIT
    (30) cond_dec -> . INT COLON ID COMMA cond_dec
    (31) cond_dec -> . INT COLON INIT COMMA cond_dec
    (32) cond_dec -> . nil
    (2) nil -> .

    INT             shift and go to state 63
    CLOSELIST       reduce using rule 2 (nil -> .)

    cond_dec                       shift and go to state 102
    nil                            shift and go to state 64

state 96

    (36) state_dec -> INT COLON ID COMMA state_dec .

    CLOSELIST       reduce using rule 36 (state_dec -> INT COLON ID COMMA state_dec .)


state 97

    (37) state_dec -> INT COLON INIT COMMA state_dec .

    CLOSELIST       reduce using rule 37 (state_dec -> INT COLON INIT COMMA state_dec .)


state 98

    (17) act_or_pred -> ACTION COLON ID COMMA PARAMS COLON . OPENLIST param_dec CLOSELIST

    OPENLIST        shift and go to state 103


state 99

    (18) act_or_pred -> PREDICATE COLON ID COMMA PARAMS COLON . OPENLIST param_dec CLOSELIST

    OPENLIST        shift and go to state 104


state 100

    (19) act_or_pred -> PREDICATE COLON NOT ID COMMA PARAMS . COLON OPENLIST param_dec CLOSELIST

    COLON           shift and go to state 105


state 101

    (30) cond_dec -> INT COLON ID COMMA cond_dec .

    CLOSELIST       reduce using rule 30 (cond_dec -> INT COLON ID COMMA cond_dec .)


state 102

    (31) cond_dec -> INT COLON INIT COMMA cond_dec .

    CLOSELIST       reduce using rule 31 (cond_dec -> INT COLON INIT COMMA cond_dec .)


state 103

    (17) act_or_pred -> ACTION COLON ID COMMA PARAMS COLON OPENLIST . param_dec CLOSELIST
    (21) param_dec -> . ID
    (22) param_dec -> . ID COMMA param_dec
    (23) param_dec -> . nil
    (2) nil -> .

    ID              shift and go to state 106
    CLOSELIST       reduce using rule 2 (nil -> .)

    param_dec                      shift and go to state 107
    nil                            shift and go to state 108

state 104

    (18) act_or_pred -> PREDICATE COLON ID COMMA PARAMS COLON OPENLIST . param_dec CLOSELIST
    (21) param_dec -> . ID
    (22) param_dec -> . ID COMMA param_dec
    (23) param_dec -> . nil
    (2) nil -> .

    ID              shift and go to state 106
    CLOSELIST       reduce using rule 2 (nil -> .)

    param_dec                      shift and go to state 109
    nil                            shift and go to state 108

state 105

    (19) act_or_pred -> PREDICATE COLON NOT ID COMMA PARAMS COLON . OPENLIST param_dec CLOSELIST

    OPENLIST        shift and go to state 110


state 106

    (21) param_dec -> ID .
    (22) param_dec -> ID . COMMA param_dec

    CLOSELIST       reduce using rule 21 (param_dec -> ID .)
    COMMA           shift and go to state 111


state 107

    (17) act_or_pred -> ACTION COLON ID COMMA PARAMS COLON OPENLIST param_dec . CLOSELIST

    CLOSELIST       shift and go to state 112


state 108

    (23) param_dec -> nil .

    CLOSELIST       reduce using rule 23 (param_dec -> nil .)


state 109

    (18) act_or_pred -> PREDICATE COLON ID COMMA PARAMS COLON OPENLIST param_dec . CLOSELIST

    CLOSELIST       shift and go to state 113


state 110

    (19) act_or_pred -> PREDICATE COLON NOT ID COMMA PARAMS COLON OPENLIST . param_dec CLOSELIST
    (21) param_dec -> . ID
    (22) param_dec -> . ID COMMA param_dec
    (23) param_dec -> . nil
    (2) nil -> .

    ID              shift and go to state 106
    CLOSELIST       reduce using rule 2 (nil -> .)

    param_dec                      shift and go to state 114
    nil                            shift and go to state 108

state 111

    (22) param_dec -> ID COMMA . param_dec
    (21) param_dec -> . ID
    (22) param_dec -> . ID COMMA param_dec
    (23) param_dec -> . nil
    (2) nil -> .

    ID              shift and go to state 106
    CLOSELIST       reduce using rule 2 (nil -> .)

    param_dec                      shift and go to state 115
    nil                            shift and go to state 108

state 112

    (17) act_or_pred -> ACTION COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST .

    AND             reduce using rule 17 (act_or_pred -> ACTION COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST .)
    CLOSELIST       reduce using rule 17 (act_or_pred -> ACTION COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST .)


state 113

    (18) act_or_pred -> PREDICATE COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST .

    AND             reduce using rule 18 (act_or_pred -> PREDICATE COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST .)
    CLOSELIST       reduce using rule 18 (act_or_pred -> PREDICATE COLON ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST .)


state 114

    (19) act_or_pred -> PREDICATE COLON NOT ID COMMA PARAMS COLON OPENLIST param_dec . CLOSELIST

    CLOSELIST       shift and go to state 116


state 115

    (22) param_dec -> ID COMMA param_dec .

    CLOSELIST       reduce using rule 22 (param_dec -> ID COMMA param_dec .)


state 116

    (19) act_or_pred -> PREDICATE COLON NOT ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST .

    AND             reduce using rule 19 (act_or_pred -> PREDICATE COLON NOT ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST .)
    CLOSELIST       reduce using rule 19 (act_or_pred -> PREDICATE COLON NOT ID COMMA PARAMS COLON OPENLIST param_dec CLOSELIST .)

